# autogen-rs

./: Cargo.toml  README.md  rust-toolchain.toml
examples/: user_agent.rs
src/: agent.rs  chat.rs  lib.rs
src/agent/: actor.rs  assistant.rs  mod.rs  user.rs
