[package]
edition = "2021"
name = "autogen-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = [
  "derive", # let's you derive Serialize and Deserialize for your types
]}
thiserror = "1.0.52"
tokio = {version = "1.34", features = ["full"]}
tracing = "0.1.40"
uuid = {version = "1.3", features = [
  "serde", # let's you serialize and deserialize UUIDs
  "v4", # let's you generate random UUIDs
  "fast-rng", # use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # enable better diagnostics for compile-time UUIDs
]}
