[package]
author = "Jesus Guzman, Jr." 
description = "A library creating AI agents." 
edition = "2021" 
name = "autogen-rs" 
publish = false # don't publish this crate to crates.io
version = "0.1.0" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = [
  "derive", # let's you derive Serialize and Deserialize for your types
]}
thiserror = "1.0"
tokio = {version = "1.34", features = ["full"]}
tracing = "0.1"
uuid = {version = "1.3", features = [
  "serde", # let's you serialize and deserialize UUIDs
  "v4", # let's you generate random UUIDs
  "fast-rng", # use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # enable better diagnostics for compile-time UUIDs
]}

[dev-dependencies]
anyhow = "1.0"
ctor = "0.2"
dashmap = "5.5.3"
tokio-test = "0.4.3"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
